indicator-china-weather (3.1.0-1) unstable; urgency=medium

  * Fixed display problems when the weather icon does not exist.
  * Added some weather icons.
  * Added thread processing module.
  * Access ip and city from geoip.ubuntu.com.
  * Make tray icon blink dynamically during data acquisition.
  * Using the new API interface (V3.0).
  * Use custom tooltip.

 -- lixiang <lixiang@kylinos.cn>  Fri, 06 Mar 2020 11:57:02 +0800

indicator-china-weather (3.0.3-0ubuntu2) eoan; urgency=medium

  [ Li Xiang ]
  * Handling QNetworkReply Error Code.

 -- lixiang <lixiang@kylinos.cn>  Fri, 20 Sep 2019 10:00:24 +0800

indicator-china-weather (3.0.3-0ubuntu1) eoan; urgency=medium

  [ Li Xiang ]
  * Modify the AboutDialog.
  * Update translations for MainWindow.
  * Access icon from theme.
  * Change `PKGCONFIG += geoip` to `LIBS += -lGeoIP` for 19.10.
  * Support for Auto-Location of Cities.
  * Add the masking layer when acquiring data.
  * Fixed the bug that display location error.
  * Update translations.
  * Handling mouse events on pallets.
  * PrimaryScreen display.
  * Hide window when focusOutEvent occurred.
  * Mainwindow moves with the position of panel.
  * Fixed weekly error.
  * Used the latest version of heweather API.
  * New UI with Qt5.
  * Fixed the bug that Refresh time error.
  * Show on the bottom right of the screen when on UKUI.
  * Modified the CSS style of cityitemwidget.
  * Modified the path of translated pm files and the timing of generation.

  [ handsome_feng ]
  * debian/compat: 11 -> 12
  * debian/control:
    - Bump standards-vertion to 4.4.0.
    - Bump debhelper requirement for compat

 -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 12 Aug 2019 15:24:19 +0800

indicator-china-weather (2.2.8-0ubuntu1) bionic; urgency=medium

  * Remove "Recommends: python-apport" in the control file.
    (LP: #1763732)
  * Fix the bug that the aboutdialog failed to popped out.
